[gd_scene load_steps=32 format=3 uid="uid://dgmfogp7w0h34"]

[ext_resource type="Script" path="res://scripts/spike_blaster.gd" id="1_dk3o6"]
[ext_resource type="Texture2D" uid="uid://d36v415lv0iip" path="res://sprites/pvv_peaspike.png" id="1_gg4tk"]
[ext_resource type="PackedScene" uid="uid://kqjgpwrln2xx" path="res://scenes/progress_bar.tscn" id="2_8d5r2"]
[ext_resource type="PackedScene" uid="uid://dvy7lryr5q3ee" path="res://scenes/health_bar.tscn" id="3_bqc52"]

[sub_resource type="AtlasTexture" id="AtlasTexture_tqmxm"]
atlas = ExtResource("1_gg4tk")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fp48u"]
atlas = ExtResource("1_gg4tk")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uuqvi"]
atlas = ExtResource("1_gg4tk")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_36hkc"]
atlas = ExtResource("1_gg4tk")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e3evt"]
atlas = ExtResource("1_gg4tk")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sq7w8"]
atlas = ExtResource("1_gg4tk")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2wla"]
atlas = ExtResource("1_gg4tk")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1yabq"]
atlas = ExtResource("1_gg4tk")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jjqjm"]
atlas = ExtResource("1_gg4tk")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gajje"]
atlas = ExtResource("1_gg4tk")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6456k"]
atlas = ExtResource("1_gg4tk")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lxrbp"]
atlas = ExtResource("1_gg4tk")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_msu28"]
atlas = ExtResource("1_gg4tk")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4n54b"]
atlas = ExtResource("1_gg4tk")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j2d1e"]
atlas = ExtResource("1_gg4tk")
region = Rect2(320, 0, 32, 32)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_7mce2"]
load_path = "res://.godot/imported/pvz_sunpea.png-c8639a2bc98a9f289c016111b38f9280.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_m1nt6"]
atlas = SubResource("CompressedTexture2D_7mce2")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q443w"]
atlas = SubResource("CompressedTexture2D_7mce2")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ph02s"]
atlas = SubResource("CompressedTexture2D_7mce2")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kwfae"]
atlas = SubResource("CompressedTexture2D_7mce2")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yyc72"]
atlas = SubResource("CompressedTexture2D_7mce2")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bt75l"]
atlas = SubResource("CompressedTexture2D_7mce2")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f475x"]
atlas = SubResource("CompressedTexture2D_7mce2")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rkfm1"]
atlas = SubResource("CompressedTexture2D_7mce2")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_oryc8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tqmxm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fp48u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uuqvi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_36hkc")
}],
"loop": true,
"name": &"action",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e3evt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sq7w8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2wla")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1yabq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jjqjm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gajje")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6456k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lxrbp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_msu28")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4n54b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j2d1e")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.4,
"texture": SubResource("AtlasTexture_m1nt6")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_q443w")
}, {
"duration": 1.3,
"texture": SubResource("AtlasTexture_ph02s")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_kwfae")
}, {
"duration": 2.1,
"texture": SubResource("AtlasTexture_yyc72")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_bt75l")
}, {
"duration": 0.9,
"texture": SubResource("AtlasTexture_f475x")
}],
"loop": true,
"name": &"mini_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tqmxm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fp48u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_36hkc")
}],
"loop": true,
"name": &"power_up",
"speed": 18.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rkfm1")
}],
"loop": true,
"name": &"seed",
"speed": 0.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yq4tc"]
size = Vector2(476, 309)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_cvqjy"]
radius = 4.0
height = 24.0

[node name="spike_blaster" type="Node2D"]
script = ExtResource("1_dk3o6")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_oryc8")
animation = &"idle"
frame_progress = 0.278286

[node name="Timer" type="Timer" parent="."]
process_callback = 0
one_shot = true

[node name="timer_bar" parent="." instance=ExtResource("2_8d5r2")]
modulate = Color(0.509804, 0.823529, 0.509804, 1)
position = Vector2(-15, 8)
scale = Vector2(0.2, 0.2)

[node name="time_up" type="Timer" parent="."]

[node name="time_up_bar" parent="." instance=ExtResource("2_8d5r2")]
z_index = -1
position = Vector2(9, -15)
scale = Vector2(0.2, 0.2)

[node name="health_bar" parent="." instance=ExtResource("3_bqc52")]
modulate = Color(0.960784, 0.25098, 0.298039, 1)
z_index = -1
position = Vector2(-15, -15)
scale = Vector2(0.2, 0.2)

[node name="shoot_range" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="shoot_range"]
position = Vector2(204, -0.5)
shape = SubResource("RectangleShape2D_yq4tc")

[node name="hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
shape = SubResource("CapsuleShape2D_cvqjy")

[connection signal="animation_looped" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_looped"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="time_up" to="." method="_on_time_up_timeout"]
[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
